<?php die();?>

# when the language filter was turned on we weren't able to download the languages
+ added an option to hide the languages that are at 0%
+ contribute now link on the resource leads directly to the editor in transifex.com
# pagination was missing from the projects view
~ updated language & country database
~ updated default language mappings
+ added footer
+ added breadcrumbs
+ added a router file
+ added a language view
# now stats are being calculated as in transifex